syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.khaago.lethe";
option java_outer_classname = "LetheProto";

package lethe;

// Base broker template.
service Broker {
  // send an event to one or more topics and receive an ack
  rpc Dispatch (DispatchOptions) returns (Ack) {}
  // send a stream of events and receive a corresponding stream of acks
  rpc DispatchStream (stream DispatchOptions) returns (stream Ack) {}

  // register a client
  rpc Register(RegistrationRequest) returns (RegistrationResponse) {}
  // susbcribe to a topic - tell the sever you want to receive events for a certain topic
  rpc Subscribe (SubscribeOptions) returns (Topic) {}
  // listen to a topic for events
  rpc Listen (ListenOptions) returns (stream Event) {}

  // list topics
  rpc ListTopic(ListTopicOptions) returns (ListTopicResults) {}
  // create new topic
  rpc CreateTopic(CreateTopicOptions) returns (CreateTopicResults) {}
  // delete existing topic
  rpc DeleteTopic(DeleteTopicOptions) returns (DeleteTopicResult){}
}

message SubscribeOptions {
  string topic_name = 1;
  TopicOptions topic_options = 2;
}

message DispatchOptions {
  repeated string topics  = 1;
  Event event = 2;
}

// regex
message ListTopicOptions {
  string pattern = 1;
  repeated Tag tags = 2;
}

message ListTopicResults {
  repeated Topic topics = 1;
}

message RegistrationRequest {
  string client_name = 1;
  repeated Tag tags = 2;
  bool deregister = 3;
}

message RegistrationResponse {
  string client_name = 1;
}

// offest - negative offset means latest
message ListenOptions {
  string topic_name = 1;
  int32 offset = 2;
}

message CreateTopicOptions {
  string name = 1;
  string description = 2;
  int64 retention = 3;
  repeated Tag tags = 6;
}

message CreateTopicResults {
  Topic topic = 1;
}

// delete the topic and all messages in it
message DeleteTopicOptions {
  string name = 1;
}

message DeleteTopicResult {
  string name = 1;
  bool success = 2;
}

message Topic {
  string name = 1;
  string created = 2;
  int64 retention = 3;
  string description = 4;
  TopicOptions options = 5;
  repeated Tag tags = 6;
}

message Tag {
  string key = 1;
  string value = 2;
}

message TopicOptions {
  // not implemented
}

message Event {
  string msg_id = 1;
  bytes msg = 4;
  int64 time = 5;
}

message Ack {
  string msg_id = 2;
  int64 time = 4;
  string success = 5;
  string error_msg = 6;   // message was received but something went wrong in the server
}
